@@ -1,1 +1,15 @@
 Pedro Lopez-Cabanillas <plcl@users.sourceforge.net>
+
+Translations
+
+    Czech: Pavel Fric <pavelfric@seznam.cz>  
+    file: po/cs.po
+
+    German. Rene Landert <rene.landert@bluewin.ch>
+    file: po/de.po
+
+    Spanish: Pedro López-Cabanillas <plcl@users.sourceforge.net>
+    file: po/es.po
+    
+    French: Julien Richard-Foy <julien.rf@no-log.org>
+    file: po/fr.po
