@@ -24,8 +24,8 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_admin")
 
 SET (VERSION_MAJOR "0")
 SET (VERSION_MINOR "9")
-SET (VERSION_PATCH "3")
-SET (VERSION_SUFFIX "")
+SET (VERSION_PATCH "4")
+SET (VERSION_SUFFIX "svn")
 SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 ADD_DEFINITIONS(-D'VERSION="${VERSION}"')
 
