@@ -1,3 +1,7 @@
+2010-05-01 00:00 plcl
+
+    * German translation, by Rene Landert
+
 2010-04-19 00:00 plcl
 
     * Release 0.9.3 
